--- a/src/app/show-report/show-report.component.html
+++ b/src/app/show-report/show-report.component.html
@@ -1,5 +1,12 @@
 <div class="container">
-  <div class="page-header">
+  <div>
+    <h1 class="text-center">Toegankelijkheidsrapport</h1>
+    <h1 class="text-center">WCAG 2.1</h1>
+  </div>
+  <div>
+    <p><strong>Website:</strong> {{report.website}}</p>
+    <p><strong>Onderzoeker(s):</strong> {{report.evaluator}}</p>
+    <p><strong>Publicatiedatum:</strong> {{report.publicationDate}}</p>
   </div>
   <div>
     <div class="panel panel-default">
