start with print-css

--- a/src/app/show-report/show-report.component.html
+++ b/src/app/show-report/show-report.component.html
@@ -3,12 +3,13 @@
     <h1 class="text-center">Toegankelijkheidsrapport</h1>
     <h1 class="text-center">WCAG 2.1</h1>
   </div>
-  <div>
+  <div class="bottom-page">
     <p><strong>Website:</strong> {{report.website}}</p>
     <p><strong>Onderzoeker(s):</strong> {{report.evaluator}}</p>
     <p><strong>Publicatiedatum:</strong> {{report.publicationDate}}</p>
+    <hr/>
   </div>
-  <div>
+  <div style="page-break-before: always">
     <div class="panel panel-default">
       <div class="panel-heading"><h2>Samenvatting</h2></div>
       <table class="table">
