--- a/src/app/upload-json/upload-json.component.html
+++ b/src/app/upload-json/upload-json.component.html
@@ -18,9 +18,11 @@
           <label for="scope">Scope van het onderzoek</label>
           <textarea id="scope" rows="5" (change)="onScopeChange($event)" class="form-control"></textarea>
         </div>
-        <div class="form-group">
-          <label for="onlyIssues">Alleen issues tonen</label>
-          <input type="checkbox" id="onlyIssues" (change)="onOnlyIssuesChange($event)" class="form-control"/>
+        <div class="checkbox">
+          <label>
+            <input type="checkbox" id="onlyIssues" (change)="onOnlyIssuesChange($event)"/>
+            Alleen issues tonen
+          </label>
         </div>
       </div>
     </div>
